# liflidar

./: LICENSE  README.md  main.py  pyproject.toml
configs/: lidar_cal.txt  styles.qss
liflidar/: LIDAR_main.py  __init__.py  data_LIDAR.txt  gui.py  gui2.py  gui3.py  instrument.py
utils/: 50-usb-perms.rules  config  install_lidar.sh  install_raspberrypi.sh  install_usb.md  lidar.service  lidar.sh  tunnel.sh
