[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "liflidar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pyqtgraph",
    "asyncqt==0.8.0",
]

[tool.setuptools.packages.find]
include = ["liflidar"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
